[package]
name = "rust_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
futures-util = "0.3.25"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jsonwebtoken = "8.3"
bcrypt = "0.13"

#[target.x86_64-unknown-linux-musl]
##linker = "rust-lld"
#linker = "x86_64-linux-musl-gcc"
